--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <div >
       <h3 display="inline-block">Raspberry pi:</h3>
-      <p align="right" display="inline-block">
+      <p display="inline-block">
         <img
           height="40px"
           src="https://www.vectorlogo.zone/logos/raspberrypi/raspberrypi-icon.svg"
